Update all cohort endpoints
